--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,12 +20,22 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-
+            form_login:
+                # "login" is the name of the route created previously
+                login_path: login
+                check_path: login
+                enable_csrf: true
+            logout :
+                path: app_logout
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+            
+    role_hierarchy:
+        ROLE_CONTRIBUTOR: ROLE_USER
+        ROLE_ADMIN: ROLE_CONTRIBUTOR
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
